# river-lang

./: .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: caa-enforcement.yml  ci.yml
backend/rust/: Cargo.toml  README.md
backend/rust/crates/geologist-backend/: Cargo.toml  build.rs
backend/rust/crates/geologist-backend/src/: bridge.rs  emitter.rs  epoch_chain.rs  lib.rs  manifest.rs  path_auditor.rs  spatial_mapper.rs
backend/rust/crates/river-sim/: Cargo.toml
backend/rust/crates/river-sim/src/: dll_model.rs  lib.rs  ppm.rs  router.rs  spatial_mapper_sim.rs  validation.rs
compiler/ts-frontend/: README.md  package-lock.json  package.json  tsconfig.json
compiler/ts-frontend/src/: cli.ts  index.ts
compiler/ts-frontend/src/lexer/: lexer.ts  token.ts
compiler/ts-frontend/src/parser/: ast.ts  parser.ts
compiler/ts-frontend/src/typecheck/: typeChecker.ts
compiler/ts-frontend/test/: lexer.test.ts  parser.test.ts  typechecker.test.ts
docs/: CAA.md  CAA_SIGNERS.md  CONTRIBUTING.md  ROADMAP.md
docs/adr/: 0001-stack-assignment.md
examples/: collision_cry.rasm  fibonacci.rasm
examples/fibonacci/: main.c
hdl/cpp/: CMakeLists.txt  README.md
hdl/cpp/include/: hdl_codegen.hpp  pdk_map.h  river_drc.h  river_drc_bridge.h  river_hdl.h  river_hdl_bridge.h  types.h
hdl/cpp/src/: drc_phase1.cpp  drc_phase2.cpp  ffi_bridge.cpp  hdl_emitter.cpp
hdl/cpp/tests/: test_drc_phase1.cpp  test_drc_phase2.cpp  test_hdl_emitter.cpp
hdl/cpp/tests/fixtures/: fibonacci.json  minimal.json
interfaces/: channel-graph.schema.json
runtime/c/: CMakeLists.txt  README.md
runtime/c/include/: river_hw.h  river_runtime.h
runtime/c/src/: river_await.c  river_enclave_wipe.c  river_purge.c  river_runtime.c  river_sim_bridge.c  river_spawn.c
runtime/c/test/: test_river_runtime.c
schemas/: rvr-manifest-v1.md
scripts/: bootstrap.ps1  e2e_smoke.sh
tooling/lsp/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
tooling/lsp/editors/: helix.toml  neovim.lua  vscode-settings.json
tooling/lsp/src/: analyser.ts  lexer.ts  parser.ts  server.test.ts  server.ts  types.ts
tooling/lsp/tests/: server.test.ts
tooling/syntax/: README.md  river-lang.tmLanguage.json
tooling/syntax/test/corpus/: fibonacci.txt
tooling/syntax/tree-sitter-river/: grammar.js  package-lock.json  package.json
tooling/syntax/tree-sitter-river/queries/: highlights.scm  indents.scm  locals.scm
tooling/syntax/tree-sitter-river/src/: grammar.json  node-types.json  parser.c
tooling/syntax/tree-sitter-river/test/corpus/: fibonacci.txt
tooling/syntax/vscode-extension/: .vscodeignore  language-configuration.json  package-lock.json  package.json  tsconfig.json
tooling/syntax/vscode-extension/scripts/: copy-server.js
tooling/syntax/vscode-extension/src/: extension.ts
